# mockupgen

./: README.md  setup.cfg
mockupgen/: image_processing.py  mockupgen.py
